# Shopping_Agent

./: README.md
my_shopping_agent/: README.md  pyproject.toml
my_shopping_agent/knowledge/: spreadsheet.xlsx
my_shopping_agent/shopping_cart/: cart_ORD_20231027_001_20250302_205222.csv  cart_ORD_20231027_001_20250302_205222.txt  cart_ORD_20231027_001_20250302_215025.csv  cart_ORD_20231027_001_20250302_215025.txt  cart_ORD_20231027_001_20250302_223502.csv  cart_ORD_20231027_001_20250302_223502.txt  shopping_cart_20250301.csv  shopping_cart_20250301.txt  shopping_cart_20250302.csv  shopping_cart_20250302.txt
my_shopping_agent/src/my_shopping_agent/: main.py
my_shopping_agent/src/my_shopping_agent/crews/poem_crew/: Shopping_crew.py
my_shopping_agent/src/my_shopping_agent/crews/poem_crew/config/: agents.yaml  tasks.yaml
my_shopping_agent/src/my_shopping_agent/tools/: SearchCatalogTool.py
